tdf#120231 Focus to document on sidebar tabbar deck tab click

Change-Id: Ic93b0171c9862f70311e93d64d1b93baf35a5182
Reviewed-on: https://gerrit.libreoffice.org/61457
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <tietze.heiko@gmail.com>
Tested-by: Heiko Tietze <tietze.heiko@gmail.com>
Reviewed-by: Jim Raykowski <raykowj@gmail.com>